--- a/hw1/index.html
+++ b/hw1/index.html
@@ -10,7 +10,7 @@
         <toggle>Dark</toggle>
         <h1>Create Login for Swift Tracker</h1>
         <div><image src="app.jpg" alt="People following GPS">
-        <form action="page2.html" id="form">
+        <form action="page2.html" method="get" id="form">
         <!-- action="create_login.php" method="post"> -->
             <label for="first_name">First Name:</label>
             <input type="text" id="first_name" name="first_name" required><br>
