--- a/assignment3/dogs.html
+++ b/assignment3/dogs.html
@@ -1,11 +1,8 @@
 <html>
     <head>Dog Breeds
-        <link rel="stylesheet" href="dogs.css">
     </head>
     <body>
-        <input type="text" id="breedInput" list="breedSuggestion">
-        <datalist id="breedSuggestion">
-        </datalist>
+       <br>Hello
     </body>
     <script src="dogs.js"></script>
 </html>
