--- a/index.html
+++ b/index.html
@@ -25,9 +25,10 @@
               <option value="Terrier">
         </datalist>
         <!-- ask prof how to search by clicking on the option -->
-       <button onclick="search()">Search</button>   
+       <button id="button" onclick="search()">Search</button>   
 <!-- style =display:none doesnt show image n=until searched -->
        <img src="" style="display:none" id="photo">
+       <p id="description"></p>
 
     </body>
     <script src="dogs.js"></script>
